Lisätty viholliset jotka jahtaavat pelaajaa

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div id="controls">
         <p>Ohjaus: WASD tai nuolinäppäimet</p>
         <p>Välilyönti: Hyppy</p>
+        <p>⚠️ Vältä punaisia esteitä ja magentanvärisiä vihollisia!</p>
     </div>
     <script type="importmap">
         {
