Lisätty ammunta: hiiren klikkaus ampuu, viholliset tuhoutuvat osuessa, räjähdysefektit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <div id="controls">
         <p>Ohjaus: WASD tai nuolinäppäimet</p>
         <p>Välilyönti: Hyppy</p>
-        <p>⚠️ Vältä punaisia esteitä ja magentanvärisiä vihollisia!</p>
+        <p>🖱️ Hiiren vasen nappi: Ammu!</p>
+        <p>⚠️ Ammu viholliset ja kerää kolikoita!</p>
     </div>
     <script type="importmap">
         {
