Korjattu ammuksen suunta ja lisätty ammusraja (30), reload (R-näppäin, 1.5s), shoot cooldown

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
     <div id="info">
         <h3>3D Selainpeli</h3>
         <p>Pisteet: <span id="score">0</span></p>
+        <p>Ammukset: <span id="ammo">30/30</span></p>
     </div>
     <div id="controls">
         <p>Ohjaus: WASD tai nuolinäppäimet</p>
         <p>Välilyönti: Hyppy</p>
         <p>🖱️ Hiiren vasen nappi: Ammu!</p>
+        <p>R: Lataa ammukset</p>
         <p>⚠️ Ammu viholliset ja kerää kolikoita!</p>
     </div>
     <script type="importmap">
