feat: vaihdettu pelaajamalli Quaternius Astronautiksi + credits

--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
             padding: 10px;
             border-radius: 5px;
         }
+        #credits {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            color: rgba(255, 255, 255, 0.5);
+            font-family: Arial, sans-serif;
+            font-size: 11px;
+            text-align: right;
+        }
     </style>
 </head>
 <body>
@@ -100,6 +109,9 @@
         <p>🖱️ Oikea nappi: Zoom</p>
         <p>R: Lataa ammukset</p>
         <p>⚠️ Ammu viholliset ja kerää kolikoita!</p>
+    </div>
+    <div id="credits">
+        <p>3D Model: Astronaut by Quaternius</p>
     </div>
     <script type="importmap">
         {
